# fhir-redux

./: CODEOWNERS  Cargo.toml  README.md  rustfmt.toml
crates/fhir-model/: Cargo.toml
crates/fhir-model/src/: codes.rs  date_time.rs  lib.rs  resources.rs  types.rs
crates/fhir-model/src/r4/: resources.rs  types.rs
crates/fhir-model/src/r5/: resources.rs  types.rs
src/: codes.rs  lib.rs  resources.rs  types.rs
src/r4/: resources.rs
src/r5/: resources.rs  types.rs
