[package]
name = "fhir-redux"
edition = "2024"
rust-version = "1.96"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
struct_field_names = "allow"
return-self-not-must-use = "allow"
return_self_not_must_use = "allow"

[features]
default = ["r4", "r5"]
stu3 = []
r4 = []
r5 = []

[dependencies]
derive_builder = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["raw_value"] }
strum = { version = "0.28.0", features = ["derive"] }
time = { version = "0.3.27", features = ["formatting", "macros", "parsing", "serde", "serde-well-known"] }
pastey = "0.2"

[dev-dependencies]
assert-json-diff = "2.0.2"
