[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
authors = ["Jake Jongejans <jake.jongejans@formelio.nl>"]
description = "Formelio-specific FHIR resource definitions"
homepage = "https://github.com/formelio/terminus"
keywords = ["FHIR", "JSON", "resources", "types"]
license = "MIT"
repository = "https://github.com/formelio/terminus"

[profile.dev]
incremental = true
lto = "off"
opt-level = 0

[profile.test]
incremental = true
lto = "off"
opt-level = 0

[profile.release]
opt-level = 2

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
struct_field_names = "allow"
return-self-not-must-use = "allow"
return_self_not_must_use = "allow"
