[package]
name = "fhir-model"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["r4", "r5"]
stu3 = []
r4 = []
r5 = []

[dependencies]
derive_builder = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["raw_value"] }
strum = { version = "0.28.0", features = ["derive"] }
time = { version = "0.3.27", features = ["formatting", "macros", "parsing", "serde", "serde-well-known"] }
paste = "1"

[dev-dependencies]
assert-json-diff = "2.0.2"
